[gd_scene load_steps=7 format=2]

[ext_resource path="res://Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Tween.gd" type="Script" id=2]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=3]
[ext_resource path="res://Data.gd" type="Script" id=6]
[ext_resource path="res://Signal.gd" type="Script" id=9]
[ext_resource path="res://Mask.tscn" type="PackedScene" id=11]

[node name="Main" type="Node"]

[node name="Signal" type="Node" parent="."]
script = ExtResource( 9 )

[node name="Data" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Game" type="Node2D" parent="."]

[node name="Board" parent="Game" instance=ExtResource( 1 )]

[node name="Mask" parent="Game" instance=ExtResource( 11 )]
visible = false
position = Vector2( 0, -4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="Tween" type="Tween" parent="."]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1440.0
margin_bottom = 900.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="hand_over" from="Signal" to="Game/Mask" method="on_hand_over"]
[connection signal="phase" from="Signal" to="Game/Mask" method="on_phase"]
[connection signal="sgin_armory_opponent_selected" from="Signal" to="Game/Board" method="on_sgin_armory_opponent_selected"]
[connection signal="sgin_assassin_once_finished" from="Signal" to="Game/Board" method="on_sgin_assassin_once_finished"]
[connection signal="sgin_cancel_skill" from="Signal" to="Game/Board" method="on_sgin_cancel_skill"]
[connection signal="sgin_card_armory_selected" from="Signal" to="Game/Board" method="on_sgin_card_armory_selected"]
[connection signal="sgin_card_clickable_clicked" from="Signal" to="Game/Board" method="on_sgin_card_clickable_clicked"]
[connection signal="sgin_card_dealt" from="Signal" to="Game/Board" method="on_sgin_card_dealt"]
[connection signal="sgin_card_focused" from="Signal" to="Game/Board" method="on_sgin_card_focused"]
[connection signal="sgin_card_laboratory_selected" from="Signal" to="Game/Board" method="on_sgin_card_laboratory_selected"]
[connection signal="sgin_card_museum_selected" from="Signal" to="Game/Board" method="on_sgin_card_museum_selected"]
[connection signal="sgin_card_played" from="Signal" to="Game/Board" method="on_sgin_card_played"]
[connection signal="sgin_card_selected" from="Signal" to="Game/Board" method="on_sgin_card_selected"]
[connection signal="sgin_card_thieves_den_selected" from="Signal" to="Game/Board" method="on_sgin_card_thieves_den_selected"]
[connection signal="sgin_card_unfocused" from="Signal" to="Game/Board" method="on_sgin_card_unfocused"]
[connection signal="sgin_card_warlord_selected" from="Signal" to="Game/Board" method="on_sgin_card_warlord_selected"]
[connection signal="sgin_char_focused" from="Signal" to="Game/Board" method="on_sgin_char_focused"]
[connection signal="sgin_char_not_ready" from="Signal" to="Signal" method="on_sgin_char_not_ready"]
[connection signal="sgin_char_ready" from="Signal" to="Signal" method="on_sgin_char_ready"]
[connection signal="sgin_char_selected" from="Signal" to="Game/Board" method="on_sgin_char_selected"]
[connection signal="sgin_char_unfocused" from="Signal" to="Game/Board" method="on_sgin_char_unfocused"]
[connection signal="sgin_character_selection" from="Signal" to="Game/Board" method="on_sgin_character_selection"]
[connection signal="sgin_disable_player_play" from="Signal" to="Game/Board" method="on_sgin_disable_player_play"]
[connection signal="sgin_draw_card" from="Signal" to="Game/Board" method="on_sgin_draw_card"]
[connection signal="sgin_gold_move" from="Signal" to="Game/Board" method="gold_move"]
[connection signal="sgin_hide_built" from="Signal" to="Game/Board" method="on_sgin_hide_built"]
[connection signal="sgin_magician_opponent_selected" from="Signal" to="Game/Board" method="on_sgin_magician_opponent_selected"]
[connection signal="sgin_magician_switch" from="Signal" to="Game/Board" method="on_sgin_magician_switch"]
[connection signal="sgin_merchant_gold" from="Signal" to="Game/Board" method="on_sgin_merchant_gold"]
[connection signal="sgin_one_round_finished" from="Signal" to="Game/Board" method="on_sgin_one_round_finished"]
[connection signal="sgin_player_draw_not_ready" from="Signal" to="Signal" method="on_sgin_player_draw_not_ready"]
[connection signal="sgin_player_draw_ready" from="Signal" to="Signal" method="on_sgin_player_draw_ready"]
[connection signal="sgin_ready_game" from="Signal" to="Game/Board" method="on_sgin_ready_game"]
[connection signal="sgin_resource_need" from="Signal" to="Game/Board" method="on_sgin_resource_need"]
[connection signal="sgin_selected_char_once_finished" from="Signal" to="Game/Board" method="on_sgin_selected_char_once_finished"]
[connection signal="sgin_set_reminder" from="Signal" to="Game/Board" method="on_sgin_set_reminder"]
[connection signal="sgin_show_built" from="Signal" to="Game/Board" method="on_sgin_show_built"]
[connection signal="sgin_skill" from="Signal" to="Game/Board" method="on_sgin_skill"]
[connection signal="sgin_start_turn" from="Signal" to="Game/Board" method="on_start_turn"]
[connection signal="sgin_thief_once_finished" from="Signal" to="Game/Board" method="on_sgin_thief_once_finished"]
[connection signal="sgin_warlord_choice" from="Signal" to="Game/Board" method="on_sgin_warlord_choice"]
[connection signal="sgin_warlord_opponent_selected" from="Signal" to="Game/Board" method="on_sgin_warlord_opponent_selected"]
